--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,10 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
+
+    --dark-hue: 250;
+
+    --color-border: var(--dark-hue), 15%, 14%;
   }
 }
 
@@ -29,4 +33,8 @@ body {
 
 button {
     @apply cursor-default;
+}
+
+* {
+    border-color: hsl(var(--color-border));
 }
