--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,53 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  --light-hue: 235;
+
+  --color-black: 0, 0%, 0%;
+  --color-white: 0, 0%, 100%;
+  --color-accent: 208, 100%, 57%;
+  --color-accent-faint: 208, 100%, 64%;
+  --color-accent-deep: 208, 100%, 47%;
+  --color-ink: var(--dark-hue), 0%, 100%;
+  --color-ink-dull: var(--dark-hue), 10%, 70%;
+  --color-ink-faint: var(--dark-hue), 10%, 55%;
+  --color-sidebar: var(--dark-hue), 15%, 7%;
+  --color-sidebar-box: var(--dark-hue), 15%, 16%;
+  --color-sidebar-line: var(--dark, -hue), 15%, 23%;
+  --color-sidebar-ink: var(--dark-hue), 0%, 100%;
+  --color-sidebar-ink-dull: var(--dark-hue), 10%, 70%;
+  --color-sidebar-ink-faint: var(--dark-hue), 10%, 55%;
+  --color-sidebar-divider: var(--dark-hue), 15%, 17%;
+  --color-sidebar-button: var(--dark-hue), 15%, 18%;
+  --color-sidebar-selected: var(--dark-hue), 15%, 24%;
+  --color-sidebar-shade: var(--dark-hue), 15%, 23%;
+  --color-app: var(--dark-hue), 15%, 13%;
+  --color-app-box: var(--dark-hue), 15%, 18%;
+  --color-app-dark-box: var(--dark-hue), 15%, 15%;
+  --color-app-darker-box: var(--dark-hue), 16%, 11%;
+  --color-app-light-box: var(--dark-hue), 15%, 34%;
+  --color-app-overlay: var(--dark-hue), 15%, 17%;
+  --color-app-input: var(--dark-hue), 15%, 20%;
+  --color-app-focus: var(--dark-hue), 15%, 10%;
+  --color-app-line: var(--dark-hue), 15%, 23%;
+  --color-app-divider: var(--dark-hue), 15%, 5%;
+  --color-app-button: var(--dark-hue), 15%, 23%;
+  --color-app-hover: var(--dark-hue), 15%, 25%;
+  --color-app-selected: var(--dark-hue), 15%, 26%;
+  --color-app-selected-item: var(--dark-hue), 15%, 18%;
+  --color-app-active: var(--dark-hue), 15%, 30%;
+  --color-app-shade: var(--dark-hue), 15%, 0%;
+  --color-app-frame: var(--dark-hue), 15%, 25%;
+  --color-app-slider: var(--dark-hue), 15%, 20%;
+  --color-app-explorer-scrollbar: var(--dark-hue), 20%, 25%;
+  --color-menu: var(--dark-hue), 25%, 5%;
+  --color-menu-line: var(--dark-hue), 15%, 11%;
+  --color-menu-ink: var(--dark-hue), 5%, 100%;
+  --color-menu-faint: var(--dark-hue), 5%, 80%;
+  --color-menu-hover: var(--dark-hue), 15%, 30%;
+  --color-menu-selected: var(--dark-hue), 5%, 30%;
+  --color-menu-shade: var(--dark-hue), 5%, 0%;
 }
 
 @media (prefers-color-scheme: dark) {
