--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,8 +68,17 @@
 }
 
 .light {
+  --color-black: 0, 0%, 0%;
+  --color-white: 0, 0%, 100%;
+
   /* main */
   --color-app: var(--light-hue), 5%, 100%;
+  --color-app-box: var(--light-hue), 5%, 98%;
+  --color-app-dark-box: var(--light-hue), 5%, 97%;
+  --color-app-darker-box: var(--light-hue), 5%, 95%;
+  --color-app-light-box: var(--light-hue), 5%, 100%;
+  --color-app-overlay: var(--light-hue), 5%, 100%;
+  --color-app-overlay-shade: var(--light-hue), 15%, 95%;
   --color-app-input: var(--light-hue), 5%, 100%;
   --color-app-focus: var(--light-hue), 5%, 98%;
   --color-app-line: var(--light-hue), 5%, 90%;
@@ -79,22 +88,39 @@
   --color-app-selected-item: var(--light-hue), 5%, 96%;
   --color-app-hover: var(--light-hue), 5%, 97%;
   --color-app-active: var(--light-hue), 5%, 87%;
-  --color-app-box: var(--light-hue), 5%, 98%;
-
+  --color-app-shade: var(--light-hue), 15%, 50%;
+  --color-app-frame: var(--light-hue), 5%, 95%;
+  --color-app-slider: var(--light-hue), 5%, 95%;
+  --color-app-explorer-scrollbar: var(--light-hue), 5%, 75%;
   /* text */
   --color-ink: var(--light-hue), 5%, 20%;
   --color-ink-dull: var(--light-hue), 5%, 30%;
   --color-ink-faint: var(--light-hue), 5%, 40%;
 
   /* accent */
-  --color-accent: 208, 100%, 57%;
+  --color-accent: calc(var(--light-hue) - 27), 100%, 57%;
+  --color-accent-faint: calc(var(--light-hue) - 27), 100%, 67%;
+  --color-accent-deep: calc(var(--light-hue) - 27), 100%, 47%;
 
+  /* sidebar */
   --color-sidebar: var(--light-hue), 5%, 96%;
-  --color-sidebar-selected: var(--light-hue), 10%, 80%;
+  --color-sidebar-box: var(--light-hue), 5%, 100%;
+  --color-sidebar-line: var(--light-hue), 10%, 85%;
   --color-sidebar-ink: var(--light-hue), 5%, 20%;
   --color-sidebar-ink-dull: var(--light-hue), 5%, 30%;
   --color-sidebar-ink-faint: var(--light-hue), 5%, 40%;
   --color-sidebar-divider: var(--light-hue), 15%, 93%;
+  --color-sidebar-button: var(--light-hue), 15%, 100%;
+  --color-sidebar-selected: var(--light-hue), 10%, 80%;
+  --color-sidebar-shade: var(--light-hue), 15%, 100%;
+
+  --color-menu: var(--light-hue), 5%, 100%;
+  --color-menu-line: var(--light-hue), 5%, 95%;
+  --color-menu-ink: var(--light-hue), 5%, 20%;
+  --color-menu-faint: var(--light-hue), 5%, 80%;
+  --color-menu-hover: var(--light-hue), 15%, 20%;
+  --color-menu-selected: var(--light-hue), 5%, 30%;
+  --color-menu-shade: var(--light-hue), 5%, 0%;
 }
 
 body {
